<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/authColorBackground"
    tools:context=".ui.auth.LoginActivity">


    <TextView
        android:id="@+id/tvWelcomeMessage"
        style="@style/HeaderTextStyle"
        android:layout_width="356dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_to_finance_manage_mobile_app"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />



    <ImageView
        android:id="@+id/imagePiggyBank"
        android:layout_width="235dp"
        android:layout_height="208dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/piggy_bank_image"
        android:src="@drawable/piggy_bank_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeMessage" />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="123"
        android:backgroundTint="@color/colorTextSecondary"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="60dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorHintWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePiggyBank" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="jon123"
        android:backgroundTint="@color/colorTextSecondary"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:minHeight="60dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorHintWhite"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePiggyBank" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorButtonBackground"
        android:text="@string/log_in"
        android:textColor="@color/colorButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        style="@style/SubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
