<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fab_square"
    android:backgroundTint="@color/background"
    android:padding="20dp"
    android:minWidth="350dp"

    >

    <EditText
        android:id="@+id/balanceInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/amount"

        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/balanceInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/balanceInput"
        app:layout_constraintTop_toBottomOf="@+id/balanceInput" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/save_btn"
        android:textColor="@color/white"
        android:foregroundTintMode="src_over"
        android:background="@drawable/fab_square_light"
        app:layout_constraintEnd_toEndOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"

        android:background="#00FFFFFF"
        android:text="@string/btn_cancel"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/save"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintTop_toTopOf="@+id/save" />
</androidx.constraintlayout.widget.ConstraintLayout>